update tools issues.

--- a/wwwroot/tool.html
+++ b/wwwroot/tool.html
@@ -12,8 +12,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <meta name="description" content="client search tool">
     <title>Dashboard: </title>
-    <link rel="stylesheet" href="forms.css" />
-    <link rel="stylesheet" href="tool.css" />
+    <link rel="stylesheet" href="/forms.css" />
+    <link rel="stylesheet" href="/tool.css" />
     <script src="/tool.js"></script>
 </head>
 
