--- a/wwwroot/visit.html
+++ b/wwwroot/visit.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/forms.css">
+    <link rel="stylesheet" href="/visit.css">
     <link rel="icon" type="image/png" sizes="64x64" href="favicon.png">
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <style rel="stylesheet" href="/visit.css"></style>
     <title>Page Visit</title>
 </head>
 
@@ -38,12 +38,14 @@
         </div>
 
         <span id="visitscontainer" style="margin: 0 1em; width: 64px; height: 20px; display: inline-block;">
-            <svg viewBox="0 0 150 2" id="vizSvgEl" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
+            <svg viewBox="0 0 150 2" id="vizSvgEl" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
                 style="width: 100%; height: 100%; overflow: hidden; left: 0px; top: 0px;">
                 <defs></defs>
                 <g>
                     <rect x="0" y="0" width="100%" height="100%" fill="rgb(100, 100, 100)" />
-                    <path d="M 0 0 Z" id="visits" transform="scale (1, -1)" transform-origin="center" class="p1" stroke="#Fe5ada" stroke-width="5"></path>
+                    <path d="M 0 0 Z" id="visits" transform="scale (1, -1)" transform-origin="center" class="p1"
+                        stroke="#Fe5ada" stroke-width="5"></path>
                 </g>
             </svg>
         </span>
@@ -54,8 +56,12 @@
 
     </div>
 
+    <div class="grid" id="resultTable">
+    </div>
+    
     <pre id="result">
     </pre>
+
 
 
 
