--- a/wwwroot/visit.html
+++ b/wwwroot/visit.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div style="display: flex; align-items: center;">
+    <div class="header" style="display: flex; align-items: center; margin: 1em 0;">
         Page:
 
         <div>
