update navigation on tools

--- a/wwwroot/tool.html
+++ b/wwwroot/tool.html
@@ -33,7 +33,7 @@
             </a>
         </div>
         <div>
-            <a href="#search">
+            <a href="#sd">
                 <span class="serverdetails"></span>
                 <span>Server Details</span>
             </a>
