--- a/wwwroot/tool.html
+++ b/wwwroot/tool.html
@@ -43,17 +43,13 @@
     <div style="display: flex; flex-direction: column; flex-wrap: wrap;">
 
         <div id="visits">
-            <h2>Total: </h2>
-            <div id="visittotal"></div>
+            <h2>Pages Statistics: </h2>
             <button onclick="return ignoreProbing(event)">Mark as Probing</button>
-            <div>By Pages:</div>
-            <div id="visitbypages">
-            </div>
+            <div id="visitbypages"></div>
         </div>
 
-
         <div id="searchbiz">
-            <h2>Search businesses:</h2>
+            <h2>Search biz:</h2>
             <a href="https://dsbs.sba.gov">dsdb.sba.gov</a>
         </div>
 
