update search tool

--- a/wwwroot/tool.html
+++ b/wwwroot/tool.html
@@ -29,7 +29,7 @@
         <div>
             <a href="#searchbiz">
                 <span class="ico search"></span>
-                <span>Search Businesses</span>
+                <span>Search Biz</span>
             </a>
         </div>
         <div>
