--- a/wwwroot/components.html
+++ b/wwwroot/components.html
@@ -122,7 +122,8 @@
 
         <label>
             input [type=email]:focus
-            <input type="email" id="n13" name="n13" class="focus" value="example@example.com" placeholder="example@example.com">
+            <input type="email" id="n13" name="n13" class="focus" value="example@example.com"
+                placeholder="example@example.com">
         </label>
 
         <br>
@@ -185,7 +186,8 @@
 
         <label>
             input [type=url]
-            <input type="url" id="n38" name="n38" class="focus" value="https://example.com" placeholder="enter url focus">
+            <input type="url" id="n38" name="n38" class="focus" value="https://example.com"
+                placeholder="enter url focus">
         </label>
 
         <br>
@@ -206,56 +208,9 @@
 
         <label>
             input[type=text].b1:focus
-            <input type="text" name="n41" class="b1 hover focus" value="text input focus" placeholder="text input focus">
+            <input type="text" name="n41" class="b1 hover focus" value="text input focus"
+                placeholder="text input focus">
         </label>
-
-        <br>
-
-        <div style="display: flex; flex-direction: column; width: 200px; margin-left: auto;">
-
-        <button>button</button>
-
-
-        <button class="hover">button:hover</button>
-
-
-        <button class="focus">button:focus</button>
-
-        <br>
-
-        <input type="button" value="input [type=button]" placeholder="input button">
-
-        <br>
-
-        <input type="submit" value="input [type=submit]">
-
-        <br>
-
-        <input type="reset" value="input [type=reset]">
-
-        <br>
-
-
-
-        <button class="b1">button.b1</button>
-
-        <button class="hover b1">button.b1:hover</button>
-
-        <button class="focus b1">button.b1:focus</button>
-
-        <br>
-
-        <input type="button" class="b1" value="input [type=button].b1" placeholder="input button">
-
-        <br>
-
-        <input type="submit" class="b1" value="input [type=submit].b1">
-
-        <br>
-
-        <input type="reset" class="b1" value="input [type=reset].b1">
-
-        </div>
 
         <br>
 
@@ -347,6 +302,52 @@
             input [type=range]
             <input type="range" id="range1" name="range" value="range" placeholder="range">
         </label>
+
+        <br>
+
+        <div style="display: flex; flex-direction: column; width: 200px; margin-left: auto;">
+
+            <button>button</button>
+
+
+            <button class="hover">button:hover</button>
+
+
+            <button class="focus">button:focus</button>
+
+            <br>
+
+            <input type="button" value="input [type=button]" placeholder="input button">
+
+            <br>
+
+            <input type="submit" value="input [type=submit]">
+
+            <br>
+
+            <input type="reset" value="input [type=reset]">
+
+            <br>
+
+            <button class="b1">button.b1</button>
+
+            <button class="hover b1">button.b1:hover</button>
+
+            <button class="focus b1">button.b1:focus</button>
+
+            <br>
+
+            <input type="button" class="b1" value="input [type=button].b1" placeholder="input button">
+
+            <br>
+
+            <input type="submit" class="b1" value="input [type=submit].b1">
+
+            <br>
+
+            <input type="reset" class="b1" value="input [type=reset].b1">
+
+        </div>
 
         <br>
 
