--- a/wwwroot/components.html
+++ b/wwwroot/components.html
@@ -26,17 +26,11 @@
     <br>
     <a href="#" class="focused">Link Focused</a>
 
-    <div class="card">
-        Card
-    </div>
-
-    <blockquote>Blockquote Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis error deserunt vitae quia
+    <blockquote style="margin-right: 0; width: 360px;">Blockquote Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis error deserunt vitae quia
         blanditiis eaque, alias nam quas, sed est ratione laborum expedita. Reiciendis libero optio aperiam accusamus ad
         placeat.</blockquote>
 
-    <form onsubmit="return false;">
-
-        <div>Form</div>
+    <form style="width: 400px;" onsubmit="return false;">
 
         <label for="n1">Label for input</label>
         <input type="text" id="n1" name="n1" placeholder="text input">
@@ -357,7 +351,7 @@
         Higher Level Components
     </h2>
 
-    <div>Horizontal menu</div>
+    <p>Horizontal menu:</p>
 
     <div class="menu menu-horizontal">
         <div class="item">
@@ -365,20 +359,20 @@
             <span class="">Search</span>
         </div>
         <div class="item">
-            <span class="ico ico-details"></span>
+            <span class="ico ico-visits"></span>
             <span class="">Details</span>
         </div>
         <div class="item hover">
-            <span class="ico ico-details"></span>
+            <span class="ico ico-search"></span>
             <span class="">Hover Details</span>
         </div>
         <div class="item focus">
-            <span class="ico ico-details"></span>
+            <span class="ico ico-visits"></span>
             <span class="">Focus Details</span>
         </div>
     </div>
 
-    <div>List:</div>
+    <p>List:</p>
 
     <div class="list">
         <div class="item">
@@ -395,7 +389,7 @@
         </div>
     </div>
 
-    <div>List with selected items</div>
+    <p>List with selected items:</p>
 
     <div class="list">
         <div class="item">
