--- a/wwwroot/components.html
+++ b/wwwroot/components.html
@@ -26,7 +26,7 @@
     <br>
     <a href="#" class="focused">Link Focused</a>
 
-    <blockquote style="margin-right: 0; width: 360px;">Blockquote Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis error deserunt vitae quia
+    <blockquote id="n42" style="margin-right: 0; width: 360px;">Blockquote Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis error deserunt vitae quia
         blanditiis eaque, alias nam quas, sed est ratione laborum expedita. Reiciendis libero optio aperiam accusamus ad
         placeat.</blockquote>
 
@@ -335,11 +335,11 @@
 
             <br>
 
-            <input type="submit" class="b1" value="input [type=submit].b1">
+            <input id="n44" type="submit" class="b1" value="input [type=submit].b1">
 
             <br>
 
-            <input type="reset" class="b1" value="input [type=reset].b1">
+            <input id="n43" type="reset" class="b1" value="input [type=reset].b1">
 
         </div>
 
@@ -353,61 +353,61 @@
 
     <p>Horizontal menu:</p>
 
-    <div class="menu menu-horizontal">
-        <div class="item">
+    <div style="width: 400px;" class="menu menu-horizontal">
+        <a href="#n20" class="item">
             <span class="ico ico-search"></span>
             <span class="">Search</span>
-        </div>
-        <div class="item">
+        </a>
+        <a href="#n43" class="item">
             <span class="ico ico-visits"></span>
             <span class="">Details</span>
-        </div>
-        <div class="item hover">
+        </a>
+        <a href="#n44" class="item hover">
             <span class="ico ico-search"></span>
             <span class="">Hover Details</span>
-        </div>
-        <div class="item focus">
+        </a>
+        <a href="#n43" class="item focus">
             <span class="ico ico-visits"></span>
             <span class="">Focus Details</span>
-        </div>
+        </a>
     </div>
 
     <p>List:</p>
 
-    <div class="list">
-        <div class="item">
+    <div style="width: 400px;" class="list">
+        <label class="item">
             Lorem ipsum dolor sit amet.
-        </div>
-        <div class="item">
+        </label>
+        <label class="item">
             Lorem ipsum dolor sit.
-        </div>
-        <div class="item hover">
+        </label>
+        <label class="item hover">
             hover Lorem ipsum dolor sit amet.
-        </div>
-        <div class="item focus">
+        </label>
+        <label class="item focus">
             focus Lorem, ipsum dolor.
-        </div>
+        </label>
     </div>
 
     <p>List with selected items:</p>
 
-    <div class="list">
-        <div class="item">
+    <div style="width: 400px;" class="list">
+        <label class="item">
             <input id="n26" name="n26" type="checkbox">
             <span>Lorem ipsum dolor sit amet.</span>
-        </div>
-        <div class="item">
+        </label>
+        <label class="item">
             <input type="checkbox" id="n27" name="n27" checked="checked">
             <span>Lorem ipsum dolor sit.</span>
-        </div>
-        <div class="item hover">
+        </label>
+        <label class="item hover">
             <input type="checkbox" id="n28" name="n28">
             <span>Hover Lorem ipsum dolor sit amet.</span>
-        </div>
-        <div class="item focus">
+        </label>
+        <label class="item focus">
             <input type="checkbox" id="n29" name="n29">
             <span>Active Lorem, ipsum dolor.</span>
-        </div>
+        </label>
     </div>
 </body>
 
