--- a/wwwroot/hr.html
+++ b/wwwroot/hr.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>For HRs - MYKHAILO BASIUK</title>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="/components-v1.css" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="64x64" href="favicon.png">
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
@@ -19,15 +19,13 @@
     <style>
         body {
             color: #565656;
-            font-family: 'Roboto', Tahoma, sans-serif;
-            letter-spacing: 1px;
         }
-
+        
         .actions a {
             display: inline-flex;
             line-height: 1em;
             text-decoration: none;
-            margin: 0.5em 0;
+            margin: 1.5em 0;
         }
 
         a {
@@ -91,6 +89,20 @@
             transition: .8s ease;
         }
 
+        #leetcode {
+            object-position: -134px 0;
+        }
+
+        #leetcode:hover {
+            object-position: -30px;
+            transition: .8s ease;
+        }
+
+        #achiv:hover {
+            object-position: -472px;
+            transition: 0.8s ease;
+        }
+
 
         ::selection {
             background: #f75b2a;
@@ -133,7 +145,7 @@
 
         <div class="actions">
             <a href="cv/Mykhailo_Basiuk_CV.pdf">
-                <img src="cv/cv100.png" id="pos" width="100" height="129" />
+                <img src="cv/cv100.png" id="pos" width="100" height="129" alt="cv"/>
                 <span class="flex-vert">
                     <span class="main">CV</span>
                     <span class="updated">updated Apr 2024</span>
@@ -143,7 +155,7 @@
             <br />
 
             <a href="resume/Mykhailo_Basiuk_Resume.pdf">
-                <img src="resume/resume.png" id="res" width="100" height="129">
+                <img src="resume/resume.png" alt="resume" id="res" width="100" height="129">
                 <span class="flex-vert">
                     <span class="main">Resume</span>
                     <span class="updated">updated Apr 2024</span>
@@ -151,6 +163,25 @@
             </a>
 
             <br />
+            
+            <a href="https://leetcode.com/u/mykhailobasiuk/" >
+                <img src="/cv/leetcode.png" alt="leetcode" id="leetcode" width="100" height="129">
+                <span class="flex-vert">
+                    <span class="main">Leetcode</span>
+                    <span class="updated">updated Jun 26 2024</span>
+                </span>
+            </a>
+
+            <br />
+
+            <a href="https://learn.microsoft.com/en-us/users/mykhailobasiuk-0798/achievements">
+                <img src="/cv/ms-achiv.png" alt="cv" id="achiv" width="100" height="129">
+                <span class="flex-vert">
+                    <span class="main">Microsoft Achivements</span>
+                    <span class="updated">updated Jun 26 2024</span>
+                </span>
+            </a>
+
 
             <p>
                 <span class="detail">e:</span> <span class="value">mykhailo.basiuk+hr@gmail.com</span>
